[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/main_menu.gd" type="Script" id=1]
[ext_resource path="res://UI/UI_theme.tres" type="Theme" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Title Anim"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1.7, 0.3 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.02, 1.4 ), Vector2( 1, 1 ) ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.545098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.2
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 1.01067, 1.2133 )
rect_pivot_offset = Vector2( 133.5, 9 )
text = "quick, match those plants!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Title"]
autoplay = "Title Anim"
"anims/Title Anim" = SubResource( 1 )

[node name="Quit" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_bottom = -6.0
grow_vertical = 0
text = "quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.35
anchor_right = 0.5
anchor_bottom = 0.35
grow_horizontal = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 122.0
margin_bottom = 22.0
text = "start"

[node name="How To Play" type="Button" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 122.0
margin_bottom = 48.0
text = "how to play"

[node name="Score" type="Button" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 122.0
margin_bottom = 74.0
text = "scores"

[node name="Settings" type="Button" parent="VBoxContainer"]
margin_top = 78.0
margin_right = 122.0
margin_bottom = 100.0
text = "settings"

[node name="Credits" type="Button" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 122.0
margin_bottom = 126.0
text = "credits"

[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/How To Play" to="." method="_on_How_To_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/Score" to="." method="_on_Score_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
